feat: add stack solutions